--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!-- Зависимости -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -52,18 +53,20 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+            <!-- Другие плагины ... -->
             <!-- Обновленная конфигурация Maven Compiler с использованием параметра release -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version> <!-- Используйте подходящую версию плагина -->
+                <version>3.11.8</version> <!-- Используйте более позднюю версию плагина -->
                 <configuration>
                     <release>17</release> <!-- Указываем версию Java -->
                 </configuration>
+            </plugin>
+            <!-- Плагин Spring Boot -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
